# oxideav-tga

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: fuzz.yml
benches/: codec.rs
fuzz/: Cargo.toml
fuzz/corpus/decode_tga/: type10_rle_rgb24_16x6.tga  type11_rle_gray_16x6.tga  type1_palette_4x4.tga  type2_rgb24_6x4.tga  type2_rgba_4x4_with_devarea.tga  type2_rgba_4x4_with_ext.tga  type2_rgba_8x8.tga  type2_truecolour_with_border_cmap.tga  type3_gray_16x2.tga  type9_palette_rle_4x4.tga
fuzz/fuzz_targets/: decode_tga.rs  encode_roundtrip.rs  extension_roundtrip.rs  roundtrip_identity.rs
src/: container.rs  decoder.rs  display.rs  encoder.rs  error.rs  image.rs  lib.rs  registry.rs  types.rs
tests/: cross_validate.rs  round2.rs  round221.rs  round227.rs  round234.rs  round252.rs  round257.rs  round261.rs  round269.rs  round273.rs  round280.rs  round289.rs  round297.rs  round3.rs  round304.rs  round311.rs  round316.rs  round323.rs  round327.rs  round332.rs  round337.rs  round345.rs  round354.rs  round366.rs  round378.rs  round4.rs  round403.rs  round403_hostile.rs  round403_orient.rs  round403_rle.rs  round5.rs  round6.rs  round7.rs  round8.rs  roundtrip.rs
