[package]
name = "oxideav-tga"
version = "0.0.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/OxideAV/oxideav-tga"
homepage = "https://github.com/OxideAV/oxideav-tga"
authors = ["Mark Karpeles"]
description = "Pure-Rust Truevision TGA (TARGA) reader/writer for oxideav — clean-room from the TGA 2.0 spec"
readme = "README.md"
keywords = ["multimedia", "image", "tga", "targa", "pure-rust"]
categories = ["multimedia::encoding", "multimedia::images"]

[dependencies]
# `oxideav-core` is gated behind the default-on `registry` feature so
# image-library consumers can depend on `oxideav-tga` with
# `default-features = false` and avoid the framework dependency tree
# entirely. Without `registry` the crate exposes the standalone
# `parse_tga` / `encode_tga_uncompressed` / `encode_tga_rle` API plus
# crate-local `TgaImage` / `TgaError` types and never references
# `oxideav-core`.
oxideav-core = { version = "0.1", optional = true }

[features]
default = ["registry"]

# Wires up the codec / encoder / decoder / container demuxer + muxer
# trait implementations against `oxideav-core` so the crate can plug
# into the `oxideav` framework registry. Default-on; turn off for
# image-library use-cases that just want the standalone `parse_tga`
# API.
registry = ["dep:oxideav-core"]

[dev-dependencies]
# criterion drives `benches/codec.rs` (decode + encode hot-path
# characterisation). Dev-dep only — no impact on downstream consumers.
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

[[bench]]
name = "codec"
harness = false
