[package]
name = "oxideav-tga-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

# TGA's decoder is the part worth fuzzing: an 18-byte header (id_length
# / cmap_type / image_type / cmap_origin/length/entry_size / x_origin /
# y_origin / width / height / pixel_depth / image_descriptor) followed
# by an optional Image ID, optional colour-map block, and a body that
# is either raw scanlines or §C.5 RLE packets (run / raw, 1-128 pixels
# per packet), in 8 / 15 / 16 / 24 / 32 bpp. The 26-byte TGA 2.0
# footer at the file tail optionally points at a 495-byte extension
# area (which itself points at a postage-stamp thumbnail, a 2048-byte
# §C.6.8 colour-correction table, a height-sized §C.6.9 scan-line
# table) and at a §C.7 developer-area tag directory.
#
# Every one of those length / offset fields lands in the attacker's
# bytes, so the decoder's bounds checks, the palette-lookup index
# clamp, the 15/16-bit A1R5G5B5 unpacker, the BGR→RGB swap, the RLE
# packet decoder's "doesn't cross scanline boundary" rule, the
# bottom-up vertical-flip, and all of the parse_tga_* helpers
# (footer / extension / postage-stamp / CCT / scan-line / developer)
# are all on the harness path. No external oracle is used (the
# clean-room wall bars third-party TGA implementations), so the
# contract is purely panic-free:
# every call returns `Ok(_)` or `Err(TgaError::…)`, never aborts,
# integer-overflows in debug/ASAN, indexes out of bounds, or OOMs.
[dependencies]
libfuzzer-sys = "0.4"

[dependencies.oxideav-tga]
path = ".."
default-features = false

# Prevent this from interfering with the umbrella workspace.
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "decode_tga"
path = "fuzz_targets/decode_tga.rs"
test = false
doc = false

# Encode-then-decode round-trip target. Drives each of the eight
# standalone writers (`encode_tga_uncompressed`,
# `encode_tga_uncompressed_rgb24`, `encode_tga_rle`,
# `encode_tga_rle_rgb24`, `encode_tga_grayscale`,
# `encode_tga_grayscale_rle`, `encode_tga_palette`,
# `encode_tga_palette_rle`) with pixel buffers derived from arbitrary
# fuzz bytes, then runs the freshly-encoded file back through
# `parse_tga` and asserts the round-tripped frame's width / height /
# pixel_format / payload length match the requested dimensions.
# Complements `decode_tga` (decoder-only panic-free contract) by
# covering the encoder side and the encode↔decode boundary.
[[bin]]
name = "encode_roundtrip"
path = "fuzz_targets/encode_roundtrip.rs"
test = false
doc = false

# Extension-area encode↔decode round-trip target. Drives
# `encode_tga_with_extension` with an `ExtensionAreaInput` built from
# arbitrary fuzz bytes (gamma / key colour / aspect ratio / software
# version / attributes type / §C.6.8 colour-correction table / §C.6.9
# scan-line table / §C.6.10 postage stamp / §C.7 developer tags), then
# re-parses the result and asserts the round trip is faithful: the
# footer is recognised as TGA 2.0, the colour-correction table and
# scan-line offsets come back byte-/value-exact, and the verbatim
# SHORT-pair fields recover their exact tuples. Exercises the
# extension-area offset back-patch arithmetic (Field 21 / 22 / 23
# offsets + the developer-directory offset) that neither `decode_tga`
# nor `encode_roundtrip` reaches.
[[bin]]
name = "extension_roundtrip"
path = "fuzz_targets/extension_roundtrip.rs"
test = false
doc = false

# Bit-exact encode↔decode *identity* target for the lossless writers.
# Where `encode_roundtrip` only asserts frame shape (because it drives the
# lossy writers too), this target drives only the writers the decoder
# recovers byte-for-byte (RGBA uncompressed/RLE, RGB24 uncompressed/RLE,
# Gray8, the default palette writers, and the explicit Bits24/Bits32
# colour-map entry sizes) and asserts the decoded raster equals a
# locally-computed expected buffer. The lossy 15/16-bit colour-map entry
# sizes are excluded (no clean-room-derivable expected output without
# re-implementing the quantiser in the harness).
[[bin]]
name = "roundtrip_identity"
path = "fuzz_targets/roundtrip_identity.rs"
test = false
doc = false
